# handyman

./: Cargo.toml  README.md  TODO.md
src/: bookmark.rs  command.rs  environment.rs  main.rs  scan.rs
src/api/: cli.rs  gui.rs  mod.rs
src/cli/: mod.rs
src/interpreter/: mod.rs  text.rs  url.rs
src/os/: linux.rs  mod.rs
src/storage/: fs.rs  mod.rs
