[package]
name = "handyman"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"
description = "Store bookmarks to anything"
repository = "https://github.com/soanvig/handyman"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.0.18"
dialoguer = "0.10.2"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
strsim = "0.10.0"
uuid = { version = "1.2.1", features = ["v4"] }
